syntax = "proto3";

package model;

// SERVICE
service Model {
  rpc Create (CreateRequest) returns (Response) {}
  rpc Update (UpdateRequest) returns (Response) {}
  rpc FindById (ByIdRequest) returns (Response) {}
  rpc Find (FindRequest) returns (FindResponse) {}
  rpc DeleteById(ByIdRequest) returns (Response) {}
}

// CREATE
message CreateRequest {
  CreateRequestData data = 1;
  map<string, string> options = 2;
}

message CreateRequestData {
  string type = 1;
  map<string, string> attributes = 2;
}

// UPDATE
message UpdateRequest {
  UpdateRequestData data = 1;
}

message UpdateRequestData {
  string type = 1;
  string id = 2;
  map<string, string> attributes = 3;
}

// FIND
message FindRequest {
  string type = 1;
  int32 page = 2;
  int32 limit = 3;
  string sortBy = 4;
  bytes filter = 5;
}

message FindResponse {
  Metadata metadata = 1;
  repeated Response data = 2;
}

message Metadata {
  Paginate paginate = 1;
}

message Paginate {
  int32 totalCount = 1;
  int32 pageCount = 2;
  int32 page = 3;
  int32 limit = 4;
  string sortBy = 5;
}

// TRANSACTIONS BY ID
message ByIdRequest {
  ByIdRequestData data = 1;
}

message ByIdRequestData {
  string type = 1;
  string id = 2;
}

// RESPONSE
message Response {
  string type = 1;
  string id = 2;
  map<string, string> attributes = 3;
}
